--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-My Page
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <title>Pew Pew Meow</title>
+        <meta name="description" content="Laser Kitten is a Product Hunt app for the Mac.">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
+    </head>
+    <body>
+        <div class="container">
+            Laser Kitten
+        </div>
+    </body>
+</html>
