adding pretty pictures

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <body>
         <div class="container">
             Laser Kitten
+
+            <img src="/img/product-hunt-preview@1500.jpg" alt="screenshots" class="img-responsive">
+
         </div>
     </body>
 </html>
