adding some images and mocking out the html

--- a/index.html
+++ b/index.html
@@ -7,12 +7,67 @@
         <meta name="description" content="Laser Kitten is a Product Hunt app for the Mac.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
+        <link href="/css/main.css" rel="stylesheet">
     </head>
     <body>
         <div class="container">
-            Laser Kitten
 
-            <img src="/img/product-hunt-preview@1500.jpg" alt="screenshots" class="img-responsive">
+            <header class="header black">
+                <nav>
+                    <ul>
+                        <li><a href="Features" title="features">Features</a></li>
+                    </ul>
+                </nav>
+            </header>
+            <div>
+
+                <img src="/img/product-hunt-preview@1500.jpg" alt="screenshots" class="img-responsive">
+                
+            </div>
+
+            <section class="block blue">
+                <div class="row">
+                    <div class="col-xs-12 col-md-6">
+                        <img src="/img/posts-list.png" alt="Posts" class="img-responsive">
+                    </div>
+                    <div class="col-xs-12 col-md-6">asdf</div>
+                </div>
+            </section>
+            <section class="block white">
+                <div class="row">
+                    <div class="col-xs-12 col-md-6">
+                    asdf
+                    </div>
+                    <div class="col-xs-12 col-md-6">
+                        <img src="/img/post-detail.png" alt="Post" class="img-responsive">
+                    </div>
+                </div>
+            </section>
+            <section class="block blue">
+                <div class="row">
+                    <div class="col-xs-12 col-md-6">
+                        <img src="/img/collections-list.png" alt="Collections" class="img-responsive">
+                    </div>
+                    <div class="col-xs-12 col-md-6">asdf</div>
+                </div>
+            </section>
+            <section class="block white">
+                <div class="row">
+                    <div class="col-xs-12 col-md-6">asdf</div>
+                    <div class="col-xs-12 col-md-6">
+                        <img src="/img/notifications-list.png" alt="Notifications" class="img-responsive">
+                    </div>
+                </div>
+            </section>
+
+            <footer class="footer black">
+                <div class="pull-left copyright">
+                    &copy; Somebody Somewhere
+                </div>
+                <div class="pull-right social">
+                twitter - fb
+                </div>
+            </footer>
 
         </div>
     </body>
