--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
         <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
-        <link href="/css/main.css" rel="stylesheet">
+        <link href="css/main.css" rel="stylesheet">
     </head>
     <body>
         <div class="container main">
@@ -42,13 +42,13 @@
                         </div>
                     </div>
                      <div class="col-xs-12 col-md-6 text-center">
-                        <img src="/img/crop/imac.png" alt="screenshots" class="img-responsive" style="display: inline-block;">
+                        <img src="img/crop/imac.png" alt="screenshots" class="img-responsive" style="display: inline-block;">
                     </div>
                 </div>
             </section>
 
             <section class="screenshots clearfix">
-                <img src="/img/product-hunt-preview@1500.jpg" alt="screenshots" class="img-responsive">
+                <img src="img/product-hunt-preview@1500.jpg" alt="screenshots" class="img-responsive">
             </section>
 
             <section class="block white clearfix">
