updating the background with something I dont even really like

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             </section>
 
             <section class="screenshots clearfix">
-                <img src="img/product-hunt-preview@1500.jpg" alt="screenshots" class="img-responsive">
+                <img src="img/product-hunt-preview@1200.jpg" alt="screenshots" class="img-responsive">
             </section>
 
             <section class="block white clearfix">
@@ -77,10 +77,11 @@
 
             <footer class="footer black">
                 <div class="pull-left copyright">
-                    &copy; Somebody Somewhere
+                    &copy; Somebody Somewhere <br>
+                    <div class="small text-muted">This app &amp; project is in no way affiliated, associated, endorsed by or connected with <a href="https://www.producthunt.com/" title="Product Hunt">Product Hunt</a></div>
                 </div>
                 <div class="pull-right social">
-                twitter - fb
+                <a href="https://imns.github.io" title="Made by IMNS">Made by IMNS</a>
                 </div>
             </footer>
             </div>
