adding a link to the source

--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
                             <h1>Laser Kitten</h1>
                             <p class="lead">A Product Hunt app for the Mac</p>
                             <p>
-                                <a href="https://github.com/imns/laser-kitten/releases" title="Download" class="btn btn-success btn-lg">Download</a>
+                                <a href="https://github.com/imns/laser-kitten/releases" title="Download" class="btn btn-primary btn-lg">Download</a>
+                                <a href="https://github.com/imns/laser-kitten" title="Download" class="btn btn-default btn-lg">Get the Source</a>
                             </p>
                         </div>
                     </div>
