churching up the faq section a little bit

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="description" content="Laser Kitten is a Product Hunt app for the Mac.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
-        <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+        <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,800' rel='stylesheet' type='text/css'>
         <link href="css/main.css" rel="stylesheet">
     </head>
     <body>
@@ -64,9 +64,10 @@
                 <div class="col-xs-8 col-xs-offset-2">
                     
                 <div class="faq text-center clearfix">
+
+
                     <h2>Why is Laser not spelled Lazer?</h2>
                     <p>Lazer is soooo much cooler, but I was worried people wouldn't be able to find it.</p>
-                    <hr>
 
                     <h2>Who's behind this project?</h2>
                     <p>
@@ -75,11 +76,9 @@
                         </a>
                         
                     </p>
-                    <hr>
 
                     <h2>Is there a Windows app?</h2>
                     <p>Nope, but Laser Kitten is built on Electron, so you can fork the project and get it to build on Windows.</p>
-                    <hr>
 
                     <h2>I found a bug?</h2>
                     <p>I'm using Github's issue tracker, so you can <a href="https://github.com/imns/laser-kitten/issues">add an issue</a> there.</p>
