--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                         </div>
                     </div>
                      <div class="col-xs-12 col-md-6 text-center">
-                        <img src="img/crop/imac.png" alt="screenshots" class="img-responsive" style="display: inline-block;">
+                        <img src="img/crop/imacwpic.png" alt="screenshots" class="img-responsive" style="display: inline-block;">
                     </div>
                 </div>
             </section>
