updating top banner

--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
     <body>
 
         <div class="product-hunt text-center">
-            <h3>Welcome Product Hunters! We <span class="glyphicon glyphicon-heart"></span> You!</h3>
-            <p>Help us out by <a href="https://twitter.com/intent/tweet?screen_name=feathersjs&amp;text=I%20just%20hunted%20an%20open%20source%20alternative%20to%20%23meteor%20on%20%40producthunt.%20http%3A%2F%2Ffeathersjs.com%20%23feathersjs" target="_blank" data-related="imns81">spreading the word</a> or <a href="https://github.com/imns/laser-kitten" class="github-link" target="_blank">starring us on Github</a>.</p>
+            <h3>
+                Hi Product Hunters!
+                <span class="small">Help us out by <a href="https://twitter.com/home?status=I%20just%20hunted%20a%20Mac%20App%20for%20%40producthunt.%20http%3A//imns.github.io/laser-kitten/" target="_blank" data-related="imns81">spreading the word</a> or <a href="https://github.com/imns/laser-kitten" class="github-link" target="_blank">starring us on Github</a></span>
+            </h3>
         </div>
 
         <div class="container main">
