--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="container main">
             <div class="wrap">
         
-                <a href="https://github.com/imns/laser-kitten/">
+                <a href="https://github.com/imns/laser-kitten/" class="github-banner">
                     <img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/38ef81f8aca64bb9a64448d0d70f1308ef5341ab/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6461726b626c75655f3132313632312e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png">
                 </a>
 
@@ -68,8 +68,8 @@
                     <img src="img/product-hunt-preview-1200-transparent.png" alt="screenshots" class="img-responsive">
                 </section>
 
-                <section class="block white clearfix">
-                    <div class="col-xs-8 col-xs-offset-2">
+                <section class="faq block white clearfix">
+                    <div class="col-xs-12 col-lg-8 col-lg-offset-2">
                         
                         <div class="faq text-center clearfix">
 
