--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 </section>
 
                 <section class="faq block white clearfix">
-                    <div class="col-xs-12 col-lg-8 col-lg-offset-2">
+                    <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2">
                         
                         <div class="faq text-center clearfix">
 
