more fine tuning

--- a/index.html
+++ b/index.html
@@ -40,12 +40,11 @@
                     </nav>
                 </header>
 
-                <section class="block white clearfix">
+                <section class="block-sm white clearfix">
                     <div class="row">
                        
                         <div class="col-xs-12 col-md-6">
                             <div class="hook">
-                                <!-- <h1>Laser Kitten</h1> -->
 
                                 <div class="text-center">
                                     <img src="img/product-hunt-logo-orange-240.png" alt="Product Hunt" style="width: 100px; margin-bottom: 20px;">
@@ -70,7 +69,6 @@
 
                 <section class="faq block white clearfix">
                     <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2">
-                        
                         <div class="faq text-center clearfix">
 
                             <h2>Why is Laser not spelled Lazer?</h2>
@@ -119,7 +117,6 @@
 
           ga('create', 'UA-34139062-6', 'auto');
           ga('send', 'pageview');
-
         </script>
     </body>
 </html>
