more fine tuning

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
         <div class="product-hunt text-center">
             <h3>
-                Hi Product Hunters!
-                <span class="small">Help us out by <a href="https://twitter.com/home?status=I%20just%20hunted%20a%20Mac%20App%20for%20%40producthunt.%20http%3A//imns.github.io/laser-kitten/" target="_blank" data-related="imns81">spreading the word</a> or <a href="https://github.com/imns/laser-kitten" class="github-link" target="_blank">starring us on Github</a></span>
+                Howdy Product Hunters!
+                <span class="small">Help us out with a <a href="https://twitter.com/home?status=I%20just%20hunted%20a%20Mac%20App%20for%20%40producthunt.%20http%3A//imns.github.io/laser-kitten/" target="_blank" data-related="imns81">tweet</a> or by <a href="https://github.com/imns/laser-kitten" class="github-link" target="_blank">starring us on Github</a></span>
             </h3>
         </div>
 
@@ -75,7 +75,7 @@
                             <p>Lazer is soooo much cooler, but I was worried people wouldn't be able to find it.</p>
 
                             <h2>Who's behind this project?</h2>
-                            <p>
+                            <p style="text-align: center;">
                                 <a href="https://imns.github.io">
                                     <img src="img/avatar.jpg" alt="IMNS" class="img-circle" style="width: 35px; margin-right: 7px;"> Nate Smith
                                 </a>
